AddVisitRecord Implemented
