# Garage Management System/src/app/assets/docs/swagger.json
@@ -60,7 +60,7 @@
             }
         },
         "/api/mechanics/delete": {
-            "post": {
+            "delete": {
                 "description": "Handles mechanic Delete request by validating input.",
                 "consumes": [
                     "application/json"
@@ -249,6 +249,10 @@
         "models.BFFAddMechanicResponse": {
             "type": "object",
             "properties": {
+                "mechanic_id": {
+                    "type": "string",
+                    "example": "arijit777"
+                },
                 "status": {
                     "type": "string",
                     "example": "Successfully added"
@@ -285,12 +289,12 @@
         "models.BFFDeleteMechanicRequest": {
             "type": "object",
             "required": [
-                "aadhar_number"
+                "mechanic_id"
             ],
             "properties": {
-                "aadhar_number": {
+                "mechanic_id": {
                     "type": "string",
-                    "example": "112233445566"
+                    "example": "arijit709"
                 }
             }
         },
